--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -33,7 +33,7 @@ frontend http-in
   default_backend couchdb-servers
 
 backend couchdb-servers
-  balance leastconn
+  # balance leastconn
   stick-table type string len 32 size 30k expire 60m
   stick on req.hdr(user)
   server couchdb1 $COUCHDB1_SERVER:5984 check inter 2s
