--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -34,8 +34,9 @@ frontend http-in
 
 backend couchdb-servers
   # balance leastconn
-  stick-table type string len 32 size 30k expire 60m
-  stick on req.hdr(user)
-  server couchdb1 $COUCHDB1_SERVER:5984 check inter 2s
-  server couchdb2 $COUCHDB2_SERVER:5984 check inter 2s
-  server couchdb3 $COUCHDB3_SERVER:5984 check inter 2s
+  # stick-table type string len 32 size 30k expire 60m
+  # stick on req.hdr(user)
+  cookie SRVNAME insert
+  server couchdb1 $COUCHDB1_SERVER:5984 check inter 2s cookie couchdb1
+  server couchdb2 $COUCHDB2_SERVER:5984 check inter 2s cookie couchdb2
+  server couchdb3 $COUCHDB3_SERVER:5984 check inter 2s cookie couchdb3
